# Sentiment-Analysis

./: CMakeLists.txt  DSString.cpp  DSString.h  SentimentClassifier.cpp  SentimentClassifier.h  accuracy.txt  data.html  main.cpp  results.csv  string.cpp  test_DSString.cpp
